# apsal-open

./: .gitignore  CHANGELOG.md  CONTENT_LICENSE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: dna-submission.yml
.github/workflows/: ci.yml  release.yml
apps/apsal-studio/: README.md  index.html  (+4 more)
docs/: MOSA_ADAPTATION.md  README.md  UPGRADE_GUIDE_0.15.0.zh-CN.md  UPGRADE_GUIDE_0.16.0.md  UPGRADE_GUIDE_0.16.0.zh-CN.md  USAGE_GUIDE.md  USAGE_GUIDE.zh-CN.md
manifest/: CURRENT_VERSION_MAP.json
protocol/: APSAL_OPEN_PROTOCOL.md  APSAL_OPEN_PROTOCOL_0.2.md  MIGRATION_APSAL_006_001.md  RFC-0001-SEMANTIC-CONTRACT.md  RFC-0002-LOCAL-REGISTRY-AND-CONVERSATIONAL-AUTHORING.md  RFC-0003-REFERENCE-BINDING-LIVE-ACTION-AND-NATIVE-4K.md  RFC-0004-DNA-RECOMMENDATION-MEMORY-AND-EXCHANGE.md  RFC-0005-FIVE-LAYER-THIRTEEN-ELEMENT-AUTHORING.md  RFC-0006-CODEX-NATIVE-GENERATION-AND-PROMPT-DELIVERY.md  RFC-0007-LEGACY-RUN-TAKEOVER.md  RFC-0008-BILINGUAL-INTERACTION.md  RFC-0009-CONTROLLED-VARIATION-SET-STRATEGY.md  RFC-0010-VISUAL-ANCHOR-AND-STAGE-PREVIEWS.md  RFC-0011-SINGLE-PROJECT-DUAL-ENTRY.md  RFC-0012-CREATIVE-PROJECT-LIBRARY-ANALYSIS-AND-SHARING.md
scripts/: build_example.py  check_docs.py  check_homepage.py  generate_brand_assets.py  generate_preview_cards.py  generate_semantic_docs.py  migrate_quiet_window_1_1.py  release.py  validate_plugin_bundle.py
tests/: test_creative_library.py  test_engine.py  test_protocol.py  test_studio_frontend.py
(+95 files in other folders)
