[project]
name = "apsal-open"
version = "0.10.0"
description = "Bilingual five-layer APSAL authoring, legacy-run takeover, local DNA Registry, Prompt/Skill delivery, and Codex-native image generation"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
